# Online_platform_C-

./: .gitignore  ACTION_PLAN.md  BUGFIX_WORKFLOW.md  CREATE_SONARCLOUD_PROJECT.md  GITHUB_ACTIONS_SETUP.md  QUICK_START_AUTO_SCAN.md  SECURITY_CHECKLIST.md
.github/workflows/: sonarcloud.yml
Cpp_online_platform/: Administrator.cpp  Administrator.h  Assignment.cpp  Assignment.h  CMakeLists.txt  Course.cpp  Course.h  CourseCategory.cpp  CourseCategory.h  Enrollment.cpp  Enrollment.h  Grade.cpp  Grade.h  Instructor.cpp  Instructor.h  Lesson.cpp  Lesson.h  PROJECT_SUMMARY.md  Payment.cpp  Payment.h  README.md  Refund.cpp  Refund.h  SETUP_SONARCLOUD_GITHUB.md  SONARCLOUD_CPP.md  Student.cpp  Student.h  Submission.cpp  Submission.h  Subscription.cpp  Subscription.h  User.cpp  User.h  Utils.cpp  Utils.h  VIEW_DELIVERY.md  VideoContent.cpp  VideoContent.h  architecture.md  model  (+23 more)
